--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@iphuong/loopback-connector-soap",
+    "name": "lb-connector-soap",
     "version": "5.1.0",
     "description": "LoopBack SOAP Web Services Connector",
     "engines": {
